--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.8.0",
+    "fast-two-sms": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.1",
+    "nexmo": "^2.9.1",
+    "nodemailer": "^6.4.17",
     "validator": "^13.5.2"
   }
 }
