--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Sanyam Suthar",
   "license": "ISC",
@@ -18,7 +19,6 @@
     "fast-two-sms": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.1",
-    "nexmo": "^2.9.1",
     "nodemailer": "^6.4.17",
     "validator": "^13.5.2"
   }
