--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "mongoose": "^5.11.1",
     "nodemailer": "^6.4.17",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
