--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.1",
     "nodemailer": "^6.4.17",
+    "twilio": "^3.72.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
