made changes for server re-deployment on render.com

--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://edayreminder-app.herokuapp.com"
+  "proxy": "https://edayreminder.onrender.com"
 }
